--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
         </h1>
         <p style="font-size: 1.2rem;" class="text-center para-font">
             We provide a number of services of wheather forecasting services.<br> Everything you need to be upto dated with the current wheather and make wise decisions based on that.
-            <i style="font-size: 1.2rem;"class="fas fa-thermometer-half"></i>
+            <i style="font-size: 1.2rem;" class="fas fa-thermometer-half"></i>
         </p>
         <div class="p-1 mt-1">
             <img style="width: 4rem;" class="img-fluid" src="{% static 'assets/img/arrow.png' %}" alt="arrow">
@@ -97,7 +97,7 @@
                 <div class="service-card d-flex flex-column align-items-center p-3">
                     <img style="width: 4rem;" class="img-fluid" src="{% static 'assets/img/history.png' %}" alt="temp">
                     <p class="fw-bold pt-3 para-font">
-                        &ensp; &ensp; History of Forecast &ensp; &ensp; 
+                        &ensp; &ensp; History of Forecast &ensp; &ensp;
                     </p>
                 </div>
             </div>
@@ -119,18 +119,18 @@
         <div class="row pt-3">
 
             <div class="col-lg-4 col-12 p-4">
-            <div style="border-radius: 20px;" class="bg-white p-5 border-rounded shadow">
-                <h3 class="heading-font">
-                    Standard
-                </h3>
-                <p style="font-size: 1.2rem;" class="para-font pb-5">
-                    Avail all of our services for your current city
-                </p>
-                <div style="border-top: 1.5px solid rgb(218, 218, 218)" class="pt-1">
-                    <p style="font-size: 1.2rem;" class="pt-3 pb-2 para-font text-center">from <span style="font-size: 2rem;" class="fw-bold">$10</span> per year</p>
+                <div style="border-radius: 20px;" class="bg-white p-5 border-rounded shadow">
+                    <h3 class="heading-font">
+                        Standard
+                    </h3>
+                    <p style="font-size: 1.2rem;" class="para-font pb-5">
+                        Avail all of our services for your current city
+                    </p>
+                    <div style="border-top: 1.5px solid rgb(218, 218, 218)" class="pt-1">
+                        <p style="font-size: 1.2rem;" class="pt-3 pb-2 para-font text-center">from <span style="font-size: 2rem;" class="fw-bold">$10</span> per year</p>
+                    </div>
+                    <button style="border-radius: 20px; padding: 10px 0px 10px 0px;" type="button" class="mt-3 d-block container-fluid btn btn-outline-dark">Purchase</button>
                 </div>
-                <button style="border-radius: 20px; padding: 10px 0px 10px 0px;" type="button" class="mt-3 d-block container-fluid btn btn-outline-dark">Purchase</button>
-            </div>
             </div>
 
             <div class="col-lg-4 col-12 p-4">
@@ -175,7 +175,10 @@
         </h1>
         <div class="p-5">
             <p style="font-size: 1.2rem; text-align: justify;" class="para-font">
-                We here at <strong>Forecast for you</strong> work together in order to keep upto dated of what is happenning around your environment and surroundings and what might happen so that you can make timely decisions and keep yourself sound and safe from any losses. We have a vast network of wheather stations around the world by which we provide you the accurate foerecast of wheather and wheather analysis of almost every city of world no matter where you live. We also provide you the services of wheather forecasting news which will keep you alert from the news of global wheather.It all starts from August 2010 when our CEO lost his mother due to heavy rain and thuderstorm in his town, after this incident he decided to build an ecosystem which will alert people if they are going to face any sort of storm, flood or heavy rainfall so that they can save the lives of themselves and of their loved ones. 
+                We here at <strong>Forecast for you</strong> work together in order to keep upto dated of what is happenning around your environment and surroundings and what might happen so that you can make timely decisions and keep yourself sound and
+                safe from any losses. We have a vast network of wheather stations around the world by which we provide you the accurate foerecast of wheather and wheather analysis of almost every city of world no matter where you live. We also provide
+                you the services of wheather forecasting news which will keep you alert from the news of global wheather.It all starts from August 2010 when our CEO lost his mother due to heavy rain and thuderstorm in his town, after this incident he
+                decided to build an ecosystem which will alert people if they are going to face any sort of storm, flood or heavy rainfall so that they can save the lives of themselves and of their loved ones.
             </p>
         </div>
         <div class="p-1">
@@ -185,7 +188,7 @@
 
 
     <!-- CONTACT US SECTION  -->
-    <div  id="contact-us" class="container-fluid pt-5 mt-2">  
+    <div id="contact-us" class="container-fluid pt-5 mt-2">
         <h1 class="text-center hero-heading display-5 p-1 m-0">
             Contact Us.
         </h1>
@@ -194,19 +197,19 @@
 
             <div class="map-head col-lg-4 col-12 p-5">
                 <div style="border-radius: 20px;" class="d-flex flex-column justify-content-center align-items-center border p-2 shadow">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d11341.927666255007!2d67.10000096261287!3d24.912996893711227!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1640497735297!5m2!1sen!2s" width="400" height="300" style="border:0; border-radius: 20px 20px 0px 0px;" allowfullscreen="" loading="lazy"></iframe>
-                <div class="d-flex container-fluid pt-4">
-                    <div class="p-3">
-                        <i style="font-size: 1.5rem;" class="far fa-compass"></i>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d11341.927666255007!2d67.10000096261287!3d24.912996893711227!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1640497735297!5m2!1sen!2s" width="400" height="300" style="border:0; border-radius: 20px 20px 0px 0px;"
+                        allowfullscreen="" loading="lazy"></iframe>
+                    <div class="d-flex container-fluid pt-4">
+                        <div class="p-3">
+                            <i style="font-size: 1.5rem;" class="far fa-compass"></i>
+                        </div>
+                        <div class="p-1">
+                            <p class="para-font">
+                                Forecast for You Private Limited. <br> A-302 Dueplex Apartments, Gulshan-e-Iqbal, Karachi, Sindh.
+                            </p>
+                        </div>
                     </div>
-                    <div class="p-1">
-                        <p class="para-font">
-                            Forecast for You Private Limited. <br>
-                            A-302 Dueplex Apartments, Gulshan-e-Iqbal, Karachi, Sindh.
-                        </p>
-                    </div>
-                </div>
-                <div class="container-fluid d-flex pt-2">
+                    <div class="container-fluid d-flex pt-2">
                         <div class="p-3">
                             <i style="font-size: 1.2rem;" class="fas fa-phone-alt"></i>
                         </div>
@@ -214,9 +217,9 @@
                             <p class="para-font mt-2">
                                 +92-45473638375
                             </p>
-                        </div>    
-                </div>
-                <div class="d-flex container-fluid pt-2">
+                        </div>
+                    </div>
+                    <div class="d-flex container-fluid pt-2">
                         <div class="p-3">
                             <i style="font-size: 1.2rem;" class="fas fa-envelope"></i>
                         </div>
@@ -224,9 +227,9 @@
                             <p class="para-font mt-2">
                                 forecastforyou@gmail.com
                             </p>
-                        </div>    
+                        </div>
+                    </div>
                 </div>
-            </div>
             </div>
 
 
@@ -260,10 +263,11 @@
                         <button style="border-radius: 12px;" type="button" class="btn btn-dark">Submit</button>
                     </div>
                 </form>
-            </div>  
+            </div>
         </div>
     </div>
 
+    {% include 'footer.html' %}
 
 
 
