--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -304,3 +304,45 @@
     font-size: 1rem;
     text-align: center;
 }
+
+
+/* SIGN UP PAGE STYLING */
+
+#id_username,
+#id_email,
+#id_first_name,
+#id_last_name,
+#id_password1,
+#id_password2,
+#login-username-input,
+#login-password-input {
+    width: 100%;
+    padding: 5px;
+    outline: none;
+    border: 0.1rem solid rgb(206, 206, 206);
+    border-radius: 5px;
+    transition-property: all;
+    transition-duration: 0.25s;
+    transition-timing-function: ease-in-out;
+}
+
+#id_username:focus-within,
+#id_email:focus-within,
+#id_first_name:focus-within,
+#id_last_name:focus-within,
+#id_password1:focus-within,
+#id_password2:focus-within,
+#login-username-input:focus-within,
+#login-password-input:focus-within {
+    border: 0.1rem solid #111218;
+}
+
+.sign-up-box {
+    width: 50vw;
+}
+
+@media screen and (max-width: 768px) {
+    .sign-up-box {
+        width: 100%;
+    }
+}
