--- a/templates/index.html
+++ b/templates/index.html
@@ -15,13 +15,28 @@
         <div class="row pt-5 m-0">
             <div class="hero-desc col-lg-6 col-12 mt-5">
                 <div>
+                    {% if user.is_authenticated %}
+                    <h1 class="hero-heading display-4 p-1 m-0">
+                        Forecast For You.
+                    </h1>
+                    <p style="font-size: 1.2rem;" class="para-font p-1 m-0">
+                        Hey <strong>{{ user.first_name }} {{ user.last_name }}</strong>, we hope that you are doing good. Click the button below to see the wheather updates of any city.  
+                    </p>
+                    <a href="{% url 'application:signup' %}">
+                        <button type="button" class="mt-3 btn btn-outline-dark" style="border-radius: 50px;">See Forecasts</button>
+                    </a>
+                    {% else %}
                     <h1 class="hero-heading display-4 p-1 m-0">
                         Forecast For You.
                     </h1>
                     <p style="font-size: 1.2rem;" class="para-font p-1 m-0">
                         We keep you upto date of what is happening in your environment by providing on-time and accurate wheather forecast around the globe.
                     </p>
-                    <button type="button" class="mt-3 btn btn-outline-dark" style="border-radius: 50px;">Get Started</button>
+                    <a href="{% url 'application:signup' %}">
+                        <button type="button" class="mt-3 btn btn-outline-dark" style="border-radius: 50px;">Get Started</button>
+                    </a>
+                    {% endif %}
+
                 </div>
             </div>
             <div class="hero-img-head col-lg-6 col-12 mt-1">
