--- a/templates/index.html
+++ b/templates/index.html
@@ -139,7 +139,7 @@
                         Standard
                     </h3>
                     <p style="font-size: 1.2rem;" class="para-font pb-5">
-                        Avail all of our services for your current city
+                        Avail wheather forecast services for your current city.
                     </p>
                     <div style="border-top: 1.5px solid rgb(218, 218, 218)" class="pt-1">
                         <p style="font-size: 1.2rem;" class="pt-3 pb-2 para-font text-center">from <span style="font-size: 2rem;" class="fw-bold">$10</span> per year</p>
@@ -151,13 +151,13 @@
             <div class="col-lg-4 col-12 p-4">
                 <div style="border-radius: 20px;" class="bg-white p-5 border-rounded shadow">
                     <h3 class="heading-font">
-                        Standard
+                        Plus
                     </h3>
                     <p style="font-size: 1.2rem;" class="para-font pb-5">
-                        Avail all of our services for your current city
+                        Avail wheather forecast services for your current continent.
                     </p>
                     <div style="border-top: 1.5px solid rgb(218, 218, 218)" class="pt-1">
-                        <p style="font-size: 1.2rem;" class="pt-3 pb-2 para-font text-center">from <span style="font-size: 2rem;" class="fw-bold">$10</span> per year</p>
+                        <p style="font-size: 1.2rem;" class="pt-3 pb-2 para-font text-center">from <span style="font-size: 2rem;" class="fw-bold">$50</span> per year</p>
                     </div>
                     <button style="border-radius: 20px; padding: 10px 0px 10px 0px;" type="button" class="mt-3 d-block container-fluid btn btn-outline-dark">Purchase</button>
                 </div>
@@ -166,13 +166,13 @@
             <div class="col-lg-4 col-12 p-4">
                 <div style="border-radius: 20px;" class="bg-white p-5 border-rounded shadow">
                     <h3 class="heading-font">
-                        Standard
+                        Premium
                     </h3>
                     <p style="font-size: 1.2rem;" class="para-font pb-5">
-                        Avail all of our services for your current city
+                        Avail wheather forecast services for the whole world.
                     </p>
                     <div style="border-top: 1.5px solid rgb(218, 218, 218)" class="pt-1">
-                        <p style="font-size: 1.2rem;" class="pt-3 pb-2 para-font text-center">from <span style="font-size: 2rem;" class="fw-bold">$10</span> per year</p>
+                        <p style="font-size: 1.2rem;" class="pt-3 pb-2 para-font text-center">from <span style="font-size: 2rem;" class="fw-bold">$100</span> per year</p>
                     </div>
                     <button style="border-radius: 20px; padding: 10px 0px 10px 0px;" type="button" class="mt-3 d-block container-fluid btn btn-outline-dark">Purchase</button>
                 </div>
